# C-Pico_nRF24L01_Positioning_System

./: CMakeLists.txt  README.md  build.sh  connect_usb.sh
src/: main.c
src/include/: nrf24l01.h  nrf24l01_constants.h
src/nrf24l01/: nrf24l01.c
