cmake_minimum_required(VERSION 3.12)
set(PICO_SDK_PATH $ENV{PICO_SDK_PATH})
set(PICO_SDK_INIT_CMAKE_FILE ${PICO_SDK_PATH}/pico_sdk_init.cmake)
include(${PICO_SDK_INIT_CMAKE_FILE})
project(nrf24l01_positioning_system)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
pico_sdk_init()
add_compile_options(-Wall -Wno-format -Werror -Wno-error=comment -Wno-comment)
aux_source_directory(src SOURCE_LIST)
aux_source_directory(src/nrf24l01 SOURCE_LIST)
include_directories(src/include)
add_executable(nrf24l01_positioning_system ${SOURCE_LIST})
pico_enable_stdio_usb(nrf24l01_positioning_system 1)
pico_enable_stdio_uart(nrf24l01_positioning_system 0)
target_link_libraries(nrf24l01_positioning_system pico_stdlib hardware_spi hardware_gpio)
pico_add_extra_outputs(nrf24l01_positioning_system)
